// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ScriptureItem component renders Genesis 1:1-5 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Genesis 1:1-5
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            1
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            In the beginning, God created the heavens and the earth. 
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            2
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            The earth was formless and empty. Darkness was on the surface of the deep and God’s Spirit was hovering over the surface of the waters.
          </Text>
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            3
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            God said, “Let there be light,” and there was light. 
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            4
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            God saw the light, and saw that it was good. God divided the light from the darkness. 
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            5
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            God called the light “day”, and the darkness he called “night”. There was evening and there was morning, the first day.
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`the ScriptureItem component renders John 3:16-17 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      John 3:16-17
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            16
          </Text>
           
        </Text>
        <Text
          style={
            Object {
              "color": "#8b0000",
            }
          }
        >
          <Text>
            For God so loved the world, that he gave his one and only Son, that whoever believes in him should not perish, but have eternal life. 
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            17
          </Text>
           
        </Text>
        <Text
          style={
            Object {
              "color": "#8b0000",
            }
          }
        >
          <Text>
            For God didn’t send his Son into the world to judge the world, but that the world should be saved through him. 
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Mark 1:1-4 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Mark 1:1-4
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            1
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            The beginning of the Good News of Jesus Christ, the Son of God.
          </Text>
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            2
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            As it is written in the prophets,
          </Text>
        </Text>
      </Text>
    </View>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text>
        “Behold, I send my messenger before your face,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        who will prepare your way before you:
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          3
        </Text>
         
      </Text>
      <Text>
        the voice of one crying in the wilderness,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        ‘Make ready the way of the Lord!
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Make his paths straight!’”
      </Text>
    </Text>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            4
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            John came baptizing in the wilderness and preaching the baptism of repentance for forgiveness of sins.
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Psalm 23 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Psalm 23
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
          "paddingBottom": 11.52,
          "paddingTop": 15.21,
        }
      }
    >
      <Text>
        A Psalm by David.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          1
        </Text>
         
      </Text>
      <Text>
        Yahweh is my shepherd:
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        I shall lack nothing.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          2
        </Text>
         
      </Text>
      <Text>
        He makes me lie down in green pastures.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        He leads me beside still waters.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          3
        </Text>
         
      </Text>
      <Text>
        He restores my soul.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        He guides me in the paths of righteousness for his name’s sake.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          4
        </Text>
         
      </Text>
      <Text>
        Even though I walk through the valley of the shadow of death,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        I will fear no evil, for you are with me.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text>
        Your rod and your staff,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        they comfort me.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          5
        </Text>
         
      </Text>
      <Text>
        You prepare a table before me
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        in the presence of my enemies.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text>
        You anoint my head with oil.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        My cup runs over.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          6
        </Text>
         
      </Text>
      <Text>
        Surely goodness and loving kindness shall follow me all the days of my life,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        and I will dwell in Yahweh’s house forever.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Psalm 32 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Psalm 32
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
          "paddingBottom": 11.52,
          "paddingTop": 15.21,
        }
      }
    >
      <Text>
        By David. A contemplative psalm.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          1
        </Text>
         
      </Text>
      <Text>
        Blessed is he whose disobedience is forgiven,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        whose sin is covered.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          2
        </Text>
         
      </Text>
      <Text>
        Blessed is the man to whom Yahweh doesn’t impute iniquity,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        in whose spirit there is no deceit.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          3
        </Text>
         
      </Text>
      <Text>
        When I kept silence, my bones wasted away through my groaning all day long.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          4
        </Text>
         
      </Text>
      <Text>
        For day and night your hand was heavy on me.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        My strength was sapped in the heat of summer. 
      </Text>
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "right",
          }
        }
      >
        

        <Text>
          Selah.
        </Text>
        

      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          5
        </Text>
         
      </Text>
      <Text>
        I acknowledged my sin to you.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        I didn’t hide my iniquity.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text>
        I said, I will confess my transgressions to Yahweh,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        and you forgave the iniquity of my sin. 
      </Text>
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "right",
          }
        }
      >
        

        <Text>
          Selah.
        </Text>
        

      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          6
        </Text>
         
      </Text>
      <Text>
        For this, let everyone who is godly pray to you in a time when you may be found.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Surely when the great waters overflow, they shall not reach to him.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          7
        </Text>
         
      </Text>
      <Text>
        You are my hiding place.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        You will preserve me from trouble.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        You will surround me with songs of deliverance. 
      </Text>
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "right",
          }
        }
      >
        

        <Text>
          Selah.
        </Text>
        

      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          8
        </Text>
         
      </Text>
      <Text>
        I will instruct you and teach you in the way which you shall go.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        I will counsel you with my eye on you.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          9
        </Text>
         
      </Text>
      <Text>
        Don’t be like the horse, or like the mule, which have no understanding,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        who are controlled by bit and bridle, or else they will not come near to you.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          10
        </Text>
         
      </Text>
      <Text>
        Many sorrows come to the wicked,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        but loving kindness shall surround him who trusts in Yahweh.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          11
        </Text>
         
      </Text>
      <Text>
        Be glad in Yahweh, and rejoice, you righteous!
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Shout for joy, all you who are upright in heart!
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Psalm 119:129 - 144 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Psalm 119:129 - 144
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
          "paddingBottom": 11.52,
          "paddingTop": 15.21,
        }
      }
    >
      <Text>
        PEY
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          129
        </Text>
         
      </Text>
      <Text>
        Your testimonies are wonderful,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        therefore my soul keeps them.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          130
        </Text>
         
      </Text>
      <Text>
        The entrance of your words gives light.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        It gives understanding to the simple.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          131
        </Text>
         
      </Text>
      <Text>
        I opened my mouth wide and panted,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        for I longed for your commandments.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          132
        </Text>
         
      </Text>
      <Text>
        Turn to me, and have mercy on me,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        as you always do to those who love your name.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          133
        </Text>
         
      </Text>
      <Text>
        Establish my footsteps in your word.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Don’t let any iniquity have dominion over me.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          134
        </Text>
         
      </Text>
      <Text>
        Redeem me from the oppression of man,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        so I will observe your precepts.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          135
        </Text>
         
      </Text>
      <Text>
        Make your face shine on your servant.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Teach me your statutes.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          136
        </Text>
         
      </Text>
      <Text>
        Streams of tears run down my eyes,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        because they don’t observe your law.
      </Text>
    </Text>
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
          "paddingBottom": 11.52,
          "paddingTop": 15.21,
        }
      }
    >
      <Text>
        TZADI
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          137
        </Text>
         
      </Text>
      <Text>
        You are righteous, Yahweh.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Your judgments are upright.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          138
        </Text>
         
      </Text>
      <Text>
        You have commanded your statutes in righteousness.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        They are fully trustworthy.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          139
        </Text>
         
      </Text>
      <Text>
        My zeal wears me out,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        because my enemies ignore your words.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          140
        </Text>
         
      </Text>
      <Text>
        Your promises have been thoroughly tested,
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        and your servant loves them.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          141
        </Text>
         
      </Text>
      <Text>
        I am small and despised.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        I don’t forget your precepts.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          142
        </Text>
         
      </Text>
      <Text>
        Your righteousness is an everlasting righteousness.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Your law is truth.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          143
        </Text>
         
      </Text>
      <Text>
        Trouble and anguish have taken hold of me.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Your commandments are my delight.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
           
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "DroidSerif",
            "fontSize": 9.6,
            "lineHeight": 26,
          }
        }
      >
         
        <Text>
          144
        </Text>
         
      </Text>
      <Text>
        Your testimonies are righteous forever.
      </Text>
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
                
      <Text>
        Give me understanding, that I may live.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Revelation 22:20-21 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Revelation 22:20-21
    </Text>
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            20
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            He who testifies these things says, 
          </Text>
        </Text>
        <Text
          style={
            Object {
              "color": "#8b0000",
            }
          }
        >
          <Text>
            “Yes, I come quickly.” 
          </Text>
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            Amen! Yes, come, Lord Jesus.
          </Text>
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 17.28,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#505050",
              "fontFamily": "DroidSerif",
              "fontSize": 9.6,
              "lineHeight": 26,
            }
          }
        >
           
          <Text>
            21
          </Text>
           
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "DroidSerif",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text>
            The grace of the Lord Jesus Christ be with all the saints. Amen.
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`the ScriptureItem component renders Song of Solomon 1:1-4 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "lineHeight": 23.04,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    />
     
    <Text
      style={
        Object {
          "color": "#505050",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 17.28,
        }
      }
    >
      WEB
    </Text>
  </Text>
  <View />
</View>
`;
